# gsdr

./: .gitignore  CMakeLists.txt  IIR_Usage_Example.md  README.md  README_QPSK.md  README_QPSK256.md
.github/workflows/: README.md  ci-comprehensive.yml  ci.yml  cuda-matrix.yml  gpu-tests-simple.yml  gpu-tests.yml  manual-test.yml  pr-comment.yml  status.yml  test.yml
docs/: ci-gpu.md
include/gsdr/: am.h  arithmetic.h  conversion.h  cuda_util.h  fir.h  fm.h  gsdr.h  iir.h  qpsk.h  qpsk256.h  quad_demod.h  trig.h  util.h
src/: add_const.cu  adjustFrequency.cu  adjustFrequency.cuh  am.cu  conversion.cu  cuComplexOperatorOverloads.cuh  fir.cu  fm.cu  iir.cu  magnitude.cu  multiply.cu  qpsk.cu  qpsk256.cu  quad_demod.cu  trig.cu
tests/: CMakeLists.txt  test_am.cpp  test_arithmetic.cpp  test_conversion.cpp  test_fir.cpp  test_fm.cpp  test_iir.cpp  test_main.cpp  test_qpsk.cpp  test_qpsk256.cpp  test_quad_demod.cpp  test_trig.cpp
